--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ header * {
   font-family: 'Bangers', system-ui;
   letter-spacing: 2px;
   font-size: clamp(2.5rem, 5vw, 4.1rem);
-  color: #fff;
+  color: #CF1827;
   line-height: 1;
   text-shadow: 0 2px 6px rgba(0, 0, 0, 0.45);
 }
@@ -125,12 +125,12 @@ header * {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 14px;
+  gap: 18px;
 }
 
 .social-top a {
   color: var(--brand-red);
-  font-size: 30px;
+  font-size: 40px;
   transition: transform 0.25s ease, text-shadow 0.25s ease;
 }
 
