--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Danny Baylen</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Bangers&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Distressed&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
 <style>
@@ -113,10 +113,10 @@ header * {
   z-index: 2;
 }
 
-.logo {
+. {
   margin-top: 16px;
-  font-family: 'Bangers', system-ui;
-  letter-spacing: 2px;
+  font-family: 'Rubik Distressed', system-ui;
+  letter-spacing: 3px;
   font-size: clamp(2.5rem, 5vw, 4.1rem);
   color: #CF1827;
   line-height: 1;
