--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ header * {
   z-index: 2;
 }
 
-. {
+.logo {
   margin-top: 16px;
   font-family: 'Rubik Distressed', system-ui;
   letter-spacing: 3px;
