--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ header::before {
   content: "";
   position: absolute;
   inset: -7%;
-  background: url("images/header.JPG") center 28%/cover no-repeat;
+  background: url("images/header.jpg") center 28%/cover no-repeat;
   background-attachment: scroll;
   transform: scale(0.8);
   transform-origin: center;
