--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ header::before {
   content: "";
   position: absolute;
   inset: -7%;
-  background: url("images/header.JPG") center 28%/cover no-repeat;
+  background: url("images/header.jpg") center 28%/cover no-repeat;
   transform: scale(0.9);
   filter: brightness(1.08) saturate(1.04);
   z-index: 0;
@@ -406,6 +406,7 @@ footer {
     <div class="gallery">
       <img src="images/photo1.jpg" alt="Danny Baylen photo 1">
       <img src="images/photo2.jpg" alt="Danny Baylen photo 2">
+      <img src="images/photo2.jpg" alt="Danny Baylen photo 3">
     </div>
   </section>
 
